Fix problem with game alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,14 +57,18 @@ button:hover {
 /* centering game area on the screen */
 .game {
     display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 5px solid #0a1b18;
     background-color: blanchedalmond;
     padding: 10px;
-    margin-top: 20px;
-
+    margin-top: 50px;
+    overflow: hidden;
 }
 
 .stats-box {
